@@ -1,6 +1,7 @@
 OpenLDAP 2.4 Change Log
 
 OpenLDAP 2.4.25 Engineering
+	Fixed ldapsearch pagedresults loop (ITS#6755)
 	Fixed tools for incompatible args (ITS#6849)
 	Fixed slapd add objectclasses in order (ITS#6837)
 	Added slapd ordering for uidNumber and gidNumber (ITS#6852)
